--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dependencies.bevy]
+git = "https://github.com/bevyengine/bevy"
+rev = "db55bf550423e741c3362a2ad33f4fea8bcb318c"
